# network-provisioning-zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build.yml
include/network_provisioning/: network_prov_mgr.h  scheme_ble.h
include/network_provisioning/test/: fake_wifi.h
proto/: network_config.options  network_constants.options  network_ctrl.proto  network_scan.options  sec1.options  session.proto
samples/wifi_prov_ble/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/wifi_prov_ble/src/: main.c
samples/wifi_prov_softap/: CMakeLists.txt  README.rst  app.overlay  prj.conf  sample.yaml
samples/wifi_prov_softap/src/: main.c
sim/wifi/: CMakeLists.txt  Kconfig  fake_wifi.c
src/: network_prov_internal.h  network_prov_mgr.c  pb_util.c  protocomm.c  protocomm.h  protocomm_ble.c  protocomm_softap.c  sections-rom.ld  security.h  security0.c  security1.c  wifi_config_handler.c  wifi_ctrl_handler.c  wifi_scan_handler.c
tests/bsim/: compile.sh
tests/bsim/ble_e2e/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bsim/ble_e2e/src/: common.h  dut.c  main.c  tester.c
tests/bsim/ble_e2e/test_scripts/: _run_test.sh  provision_success.sh  provision_wrong_password.sh
tests/common/: prov_client.c  prov_client.h
tests/esp_prov/: README.md  run.sh  setup.sh
tests/esp_prov/dut/: CMakeLists.txt  prj.conf
tests/esp_prov/dut/src/: main.c
tests/fake_wifi/: CMakeLists.txt  prj.conf  testcase.yaml
tests/fake_wifi/src/: main.c
tests/manager_api/: CMakeLists.txt  prj.conf  testcase.yaml
tests/manager_api/src/: main.c
tests/protocomm/: CMakeLists.txt  prj.conf  testcase.yaml
tests/protocomm/src/: main.c
tests/protocomm_http/: CMakeLists.txt  prj.conf  testcase.yaml
tests/protocomm_http/src/: main.c
tests/security1/: CMakeLists.txt  prj.conf  testcase.yaml
tests/security1/src/: main.c
zephyr/: module.yml
